try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - rm prince_12-1_ubuntu14.04_amd64.deb
 
 script:
-  - Rscript -e "bookdown::render_book('index.Rmd', 'all', output_dir = 'book')"
+  - Rscript -e "bookdown::render_book('index.Rmd', 'all')"
   - git config --global user.email "romain.lesur@gmail.com"
   - git config --global user.name "Romain Lesur"
   - git clone https://${GITHUB_PAT}@github.com/${TRAVIS_REPO_SLUG}.git book-output
@@ -26,7 +26,7 @@ script:
   - ls -a
   - cd docs
   - rm -f ./*.pdf
-  - cp ../../book/pulpdown.pdf ./pulpdown.pdf
+  - cp ../../pulpdown.pdf ./pulpdown.pdf
   - ls -a
   - cd ..
   - git status
