--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,9 @@ script:
   - git config --global user.email "romain.lesur@gmail.com"
   - git config --global user.name "Romain Lesur"
   - git clone -b gh-pages https://${GITHUB_PAT}@github.com/${TRAVIS_REPO_SLUG}.git book-output
-  - ls -a
   - cd book-output
-  - ls -a
-  - rm -f ./*.pdf
-  - cp ../pulpdown.pdf ./pulpdown.pdf
-  - ls -a
-  - git status
+  - rm -f ./book-output/*.pdf
+  - cp ./pulpdown.pdf ./book-output/pulpdown.pdf
   - git add --all -f ./*
   - git commit -m"Update pdf"
   - git push origin gh-pages
-  
